# pygame-ft

./: .env.example  README.md  mypy.ini  pyproject.toml
contrib/etc/: flaschen-taschen.service
demos/: test.py
demos/testcard/: demo.py
demos/train/: demo.py
etc/systemd/system/: ft-server.service
pygameft/: __init__.py
