[tool.poetry]
name = "pygame-ft"
version = "0.1.0"
description = "PyGame Bridge for Flaschen Taschen"
authors = ["Louis King <jinglemansweep@gmail.com>"]
readme = "README.md"
packages = [{include = "pygameft"}]

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.3.2"
pygame = "^2.1.2"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
